using `glibc' in the "product" field.

The following bugs are resolved with this release:

  [26534] libm.so 2.32 SIGILL in pow() due to FMA4 instruction on non-FMA4
    system
  [26555] string: strerrorname_np does not return the documented value
  [26637] libc: semctl SEM_STAT_ANY fails to pass the buffer specified
    by the caller to the kernel

Version 2.32

Major new features:

* Unicode 13.0.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 13.0.0, using
  generator scripts contributed by Mike FABIAN (Red Hat).

* New locale added: ckb_IQ (Kurdish/Sorani spoken in Iraq)

* Support for Synopsys ARC HS cores (ARCv2 ISA) running Linux has been
  added. This port requires at least binutils-2.32, gcc-8.3 and Linux-5.1.
  Three ABIs are supported:

     - arc-linux-gnu
     - arc-linux-gnuhf
     - arceb-linux-gnu

  The arc* ABI is little-endian while arceb is big-endian. All ABIs use
  64-bit time (y2038 safe) and 64-bit file offsets (LFS default).

* The GNU C Library now loads audit modules listed in the DT_AUDIT and
  DT_DEPAUDIT dynamic section entries of the main executable.

* powerpc64le supports IEEE128 long double libm/libc redirects when
  using the -mabi=ieeelongdouble to compile C code on supported GCC
  toolchains.  It is recommended to use GCC 8 or newer when testing
  this option.

* To help detect buffer overflows and other out-of-bounds accesses
  several APIs have been annotated with GCC 'access' attribute.  This
  should help GCC 10 issue better warnings.

* On Linux, functions the pthread_attr_setsigmask_np and
  pthread_attr_getsigmask_np have been added.  They allow applications
  to specify the signal mask of a thread created with pthread_create.

* The GNU C Library now provides the header file <sys/single_threaded.h>
  which declares the variable __libc_single_threaded.  Applications are
  encouraged to use this variable for single-thread optimizations,